# idj-game

include/: Animation.hpp  Component.hpp  Game.hpp  GameObject.hpp  Music.hpp  Rect.hpp  Sprite.hpp  SpriteRenderer.hpp  State.hpp  Vec2.hpp
src/: Animation.cpp  CMakeLists.txt  Component.cpp  Game.cpp  GameObject.cpp  Music.cpp  Rect.cpp  Sprite.cpp  SpriteRenderer.cpp  State.cpp  main.cpp
